--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "papaparse": "5.3.1",
     "react": "17.0.2",
+    "react-csv": "2.0.3",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0"
   },
