--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "src/index.js",
   "dependencies": {
     "papaparse": "5.3.1",
+    "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-csv": "2.0.3",
     "react-dom": "17.0.2",
